@@ -243,6 +243,9 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 132.uacl.c: out() changed to have varargs
 133.received.c: folded Received header line to put date below
 134.smtpd.c: added ssl cipher bits in Received header
+- 18/01/2023
+135.nowutc.c, qmail-qread.c, qmail-smtpd.c, qmail-showctl.c, qmonitor.c:
+    replaced qprintf with subprintf
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
